--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Django==2.2
+django-searchable-select==1.5.0
 django-widget-tweaks==1.4.3
 gunicorn==19.9.0
 mysqlclient==1.4.2.post1
-psycopg2==2.8.3
+pkg-resources==0.0.0
 pytz==2019.1
 sqlparse==0.3.0
