--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ django-daterange-filter==1.3.0
 django-widget-tweaks==1.4.3
 gunicorn==19.9.0
 mysqlclient==1.4.2.post1
+pkg-resources==0.0.0
 pytz==2019.1
 sqlparse==0.3.0
