--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 Django==2.2
+django-admin-search==0.2.2
 django-daterange-filter==1.3.0
+django-filter==2.2.0
+django-search-views==0.3.7
 django-widget-tweaks==1.4.3
+djangorestframework==3.10.3
 gunicorn==19.9.0
 mysqlclient==1.4.2.post1
 pkg-resources==0.0.0
