--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,22 @@
+astroid==2.3.2
 Django==2.2
 django-admin-search==0.2.2
+django-bootstrap-form==3.4
 django-daterange-filter==1.3.0
 django-filter==2.2.0
+django-filters==0.2.1
 django-search-views==0.3.7
 django-widget-tweaks==1.4.3
 djangorestframework==3.10.3
 gunicorn==19.9.0
+isort==4.3.21
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
 mysqlclient==1.4.2.post1
 pkg-resources==0.0.0
+pylint==2.4.3
 pytz==2019.1
+six==1.12.0
 sqlparse==0.3.0
+typed-ast==1.4.0
+wrapt==1.11.2
