--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-bootstrap-form==3.4
 django-daterange-filter==1.3.0
 django-filter==2.2.0
 django-filters==0.2.1
+django-material-admin==1.6.37
 django-search-views==0.3.7
 django-widget-tweaks==1.4.3
 djangorestframework==3.10.3
